# mpc-rs

./: Cargo.toml
benches/: brng.rs  mulopen.rs  open.rs  rkpg.rs  rxg.rs
src/: brng.rs  inv.rs  lib.rs  open.rs  params.rs  rkpg.rs  rng.rs  testutil.rs  util.rs
src/mulopen/: mod.rs  zkp.rs
