[package]
name = "mpc"
version = "0.1.0"
authors = ["ross <ross.pure@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { git = "https://github.com/renproject/secp256k1-rs" }
shamir = { git = "https://github.com/renproject/shamir-rs" }
sha2 = "0.9.1"
